# video_analysis_agent

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
core/: .gitignore  README.md  pyproject.toml
core/configs/: config.yml
core/src/personal_assistant/: agent.py  client.py  config.py  devtools.py  main.py  usage.py
core/tests/: test_agent.py  test_config.py  test_devtools.py
docs/: ui_architecture.md
docs/ui/: initial_ui_architecture.md  initial_ui_initial_design_walkthrough.md  initial_ui_review.md  ui_current_architecture.md
docs/ui/todos/: Video_Understanding_Agent_Conversational_UX_Proposal.md
scripts/: checks.sh
src/video_agent/: agent.py  client.py  main.py  usage.py
src/video_agent/ui/: agent_helper.py  app.py  layout.py  theme.py
src/video_agent/ui/views/: chat.py  events.py  settings.py  summarize.py  transcribe.py
ui/: README.md  pyproject.toml
ui/configs/: config.yml
ui/src/personal_assistant_ui/: agent_helper.py  app.py  config.py  devtools.py  layout.py  theme.py
ui/src/personal_assistant_ui/views/: __init__.py  chat.py  events.py  settings.py  summarize.py  transcribe.py
ui/tests/: test_agent_helper.py
