[project]
name = "personal-assistant-ui"
version = "0.1.0"
description = "Flet desktop UI for the Video Agent core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.3",
    "personal-assistant",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
personal-assistant-ui = "personal_assistant_ui.app:main"
personal-assistant-ui-checks = "personal_assistant_ui.devtools:run_checks"

[tool.uv.sources]
personal-assistant = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
